--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,16 @@
 {
-  "name": "node",
+  "name": "reelr",
   "version": "0.0.1",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "components"
-  ]
+  "dependencies": {
+    "angular": "1.5.6",
+    "angular-route": "1.5.6",
+    "bootstrap": "3.2.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.5"
+  },
+  "resolutions": {
+    "bootstrap": "3.2.0",
+    "angular": "1.5.6"
+  }
 }
