--- a/package.json
+++ b/package.json
@@ -13,24 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
+    "@angular/common": "~4.1.2",
+    "@angular/compiler": "~4.1.2",
+    "@angular/core": "~4.1.2",
+    "@angular/forms": "~4.1.2",
+    "@angular/http": "~4.1.2",
+    "@angular/platform-browser": "~4.1.2",
+    "@angular/platform-browser-dynamic": "~4.1.2",
+    "@angular/router": "~4.1.2",
     "bootstrap": "~3.3.7",
     "core-js": "~2.4.1",
     "font-awesome": "~4.7.0",
-    "intl": "~1.2.5",
-    "rxjs": "~5.1.0",
-    "zone.js": "~0.7.6"
+    "rxjs": "~5.1.0"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.0",
-    "@angular/compiler-cli": "~2.4.0",
+    "@angular/cli": "~1.0.3",
+    "@angular/compiler-cli": "~4.1.2",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
