--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "~3.3.7",
     "core-js": "~2.4.1",
     "font-awesome": "~4.7.0",
+    "ng2-toastr": "~4.1.2",
     "rxjs": "~5.1.0"
   },
   "devDependencies": {
