--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser": "~4.3.2",
     "@angular/platform-browser-dynamic": "~4.3.2",
     "@angular/router": "~4.3.2",
+    "@auth0/angular-jwt": "^1.0.0-beta.10",
     "bootstrap": "~3.3.7",
     "core-js": "~2.4.1",
+    "express": "~4.13.3",
+    "express-session": "~1.15.6",
     "font-awesome": "~4.7.0",
     "ng2-toastr": "~4.1.2",
+    "passport": "~0.4.0",
     "rxjs": "~5.1.0"
   },
   "devDependencies": {
