--- a/package.json
+++ b/package.json
@@ -1,71 +1,20 @@
 {
   "name": "reelr",
-  "version": "0.0.1",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "dev": "ng serve",
-    "start": "ng build --aot && node ./static/server",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~4.3.2",
-    "@angular/common": "~4.3.2",
-    "@angular/compiler": "~4.3.2",
-    "@angular/core": "~4.3.2",
-    "@angular/forms": "~4.3.2",
-    "@angular/http": "~4.3.2",
-    "@angular/platform-browser": "~4.3.2",
-    "@angular/platform-browser-dynamic": "~4.3.2",
-    "@angular/router": "~4.3.2",
-    "@auth0/angular-jwt": "^1.0.0-beta.10",
-    "bootstrap": "~3.3.7",
-    "core-js": "~2.4.1",
-    "express": "~4.13.3",
-    "font-awesome": "~4.7.0",
-    "ng2-toastr": "~4.1.2",
-    "rxjs": "~5.1.0"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "qs": "^6.5.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1"
   },
-  "devDependencies": {
-    "@angular/cli": "~1.2.5",
-    "@angular/compiler-cli": "~4.3.2",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "~0.2.2",
-    "karma-coverage-istanbul-reporter": "~0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "~2.2.2",
-    "webpack-dev-server": "~2.3.0",
-    "autoprefixer": "^6.5.3",
-    "css-loader": "^0.26.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
-    "json-loader": "^0.5.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "less-loader": "^2.2.3",
-    "postcss-loader": "^0.13.0",
-    "postcss-url": "^5.1.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
-    "script-loader": "^0.7.0",
-    "source-map-loader": "^0.1.5",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^2.4.0",
-    "url-loader": "^0.5.7"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
