--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-# compiled output
-/dist
-/tmp
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 
-# IDE
-.vscode/*
+# testing
+/coverage
+
+# production
+/build
 
 # misc
-npm-debug.log
-/typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
-
-#System Files
 .DS_Store
-Thumbs.db
+.vscode
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Environment-specific configuration - NEVER commit to Git
-config.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
